
	Added optional "next" and "prev" actions to :view command to switch
	default previewer for the current and similar files.

	Added 'extprompt' option to allow opening path input boxes in external
	editor automatically when "path" value is included in the value.  Patch by
	Kaspars Vandans.

	Added example of handling .deb-files to sample vifmrc.  Patch by Kirill
	Rekhov.

	Updated utf8proc to v2.11.2.

	Made documentation on which :commands can have comments a bit more
	verbose.

	Made `%i` keep access to the terminal instead of acting like `%i &` .
	This restores the behavior prior to v0.12.1-beta (can be considered a
	regression as this breaks several use cases).  Thanks to an anonymous at
	Vifm Q2A site.

	Documented extra information on file copying.  Patch by EA1A87.

	Improved/extended/updated documentation on cancelling operations, compare
	and custom views.

	Updated .desktop-file to add localizations and be more up-to-date with
	modern recommendations.  Separate patches by Matěj Cepl (a.k.a. mcepl) and
	Jared Cervantes (a.k.a. Jaredy899).

	Extended range of numbers Ctrl-A/Ctrl-X can deal with from [-2**31; 2**31)
	to [-2**63; 2**63).  Thanks to CaptainFantastic.

	Provided more details on file handlers and viewers in sample vifmrc files.

	Say "primary" instead of "default" in the title of :colorscheme menu.

	Improved documentation on the use registers.  Thanks to aleksejrs.

	Display descriptions as "{...}" rather than "[...]" in :file and
	:file[x]type menus.

	Improved potentially confusing wording in the dialog confirming exit while
	background jobs are running.

	Reworked --help output to be more compact and readable.

	Prefer to use more generic "items" instead of "files" when referring to
	file-system objects.  Thanks to qadzek.

	Allowed descriptions for commands of `:fileviewer`.

	Display an error on trying to switch from external preview to raw mode.

	Updated sample vifmrc files to use `vi` as a last resort if it exists.
