@@ -34,6 +34,10 @@
 	Added example of handling .deb-files to sample vifmrc.  Patch by Kirill
 	Rekhov.
 
+	Added -deep parameter to :copy command to resolve symbolic links while
+	copying.  Thanks to Jose Riha (a.k.a. jose1711) and an anonymous at Vifm
+	Q2A site.
+
 	Updated utf8proc to v2.11.2.
 
 	Made documentation on which :commands can have comments a bit more
